changs made in Ui

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <img src="./assets/svg/cod-logo.svg" alt="" class="min-h-10 ">
             </a>
             <div class="actvision-wrapper hidden sm:flex items-center justify-center gap-1">
-              <span class="nav-link text-md sm:visiblity-hidden cursor-pointer">Activision</span>
+              <span class="nav-link text-md sm:visiblity-hidden cursor-pointer on-big-big">Activision</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#ffffff" class="size-4">
                 <path fill-rule="evenodd"
                   d="M4.22 11.78a.75.75 0 0 1 0-1.06L9.44 5.5H5.75a.75.75 0 0 1 0-1.5h5.5a.75.75 0 0 1 .75.75v5.5a.75.75 0 0 1-1.5 0V6.56l-5.22 5.22a.75.75 0 0 1-1.06 0Z"
@@ -36,10 +36,7 @@
             </div>
           </div>
           <div class="nav-child-2 flex items-center justify-end w-[50%] gap-5">
-            <!--             <button class="nav-link btn-login flex items-center justify-center gap-3 py-1 px-3 bg-[var(--primary-color)] rounded-lg text-sm uppercase shadow-lg">
-              Season 6
-            </button> -->
-            <div class="btn-menu-appeand cursor-pointer">
+            <div class="btn-menu-appeand cursor-pointer on-big-big">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#ffffff"
                 stroke-width=".5">
                 <path
@@ -62,18 +59,18 @@
           <div class="sidebar-child-top flex items-center justify-between w-full">
             <h3 class="global-texts-Cond text-3xl sdb-head-mn">CALL OF DUTY</h3>
             <button
-              class="global-texts-Cond btn-close-menu text-sm py-1 px-3 rounded-lg capitalize bg-[var(--btn-background)] cursor-pointer">close</button>
+              class="global-texts-Cond btn-close-menu text-sm py-1 px-3 rounded-lg capitalize bg-[var(--btn-background)] cursor-pointer on-big-big">close</button>
           </div>
           <div class="sidebar-child-middle flex flex-col items-start justify-center gap-3 p-1 w-full">
             <span class="interection text-xs text-[#ffffff48]">Menu</span>
             <div class="sdb-elem block">
-              <a href="#" class="cursor-pointer global-texts-Cond text-2xl p-1">GAMES</a>
+              <a href="#" class="cursor-pointer global-texts-Cond text-2xl p-1 on-big-big">GAMES</a>
             </div>
             <div class="sdb-elem block">
-              <a href="#" class="cursor-pointer global-texts-Cond text-2xl p-1">NEWS</a>
+              <a href="#" class="cursor-pointer global-texts-Cond text-2xl p-1 on-big-big">NEWS</a>
             </div>
             <div class="sdb-elem flex items-center justify-between w-full p-1">
-              <a href="#" class="cursor-pointer global-texts-Cond text-2xl">ESPORTS</a>
+              <a href="#" class="cursor-pointer global-texts-Cond text-2xl on-big-big">LEAGUE</a>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#fff" class="w-5 h-5">
                 <path fill-rule="evenodd"
                   d="M4.22 11.78a.75.75 0 0 1 0-1.06L9.44 5.5H5.75a.75.75 0 0 1 0-1.5h5.5a.75.75 0 0 1 .75.75v5.5a.75.75 0 0 1-1.5 0V6.56l-5.22 5.22a.75.75 0 0 1-1.06 0Z"
@@ -81,7 +78,7 @@
               </svg>
             </div>
             <div class="sdb-elem flex items-center justify-between w-full p-1">
-              <a href="#" class="cursor-pointer global-texts-Cond text-2xl">SUPPORT</a>
+              <a href="#" class="cursor-pointer global-texts-Cond text-2xl on-big-big">SUPPORT</a>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#fff" class="w-5 h-5">
                 <path fill-rule="evenodd"
                   d="M4.22 11.78a.75.75 0 0 1 0-1.06L9.44 5.5H5.75a.75.75 0 0 1 0-1.5h5.5a.75.75 0 0 1 .75.75v5.5a.75.75 0 0 1-1.5 0V6.56l-5.22 5.22a.75.75 0 0 1-1.06 0Z"
@@ -93,7 +90,7 @@
             <span class="text-xs text-[#ffffff48]">Keys</span>
             <div class="sidebar-bot-flex flex items-center justify-between gap-3 mt-1">
               <div class="social-elem cursor-pointer flex items-center justify-center p-1">
-                <a href="#" class="text-lg font-[Hit-Cond] text-[var(--primary-color)]">STORE</a>
+                <a href="#" class="text-lg font-[Hit-Cond] text-[var(--primary-color)] on-big-big">STORE</a>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#ffffff" class="w-5 h-5">
                   <path fill-rule="evenodd"
                     d="M4.22 11.78a.75.75 0 0 1 0-1.06L9.44 5.5H5.75a.75.75 0 0 1 0-1.5h5.5a.75.75 0 0 1 .75.75v5.5a.75.75 0 0 1-1.5 0V6.56l-5.22 5.22a.75.75 0 0 1-1.06 0Z"
@@ -101,7 +98,7 @@
                 </svg>
               </div>
               <div class="social-elem cursor-pointer flex items-center justify-center">
-                <a href="#" class="text-lg font-[Hit-Cond] text-[var(--primary-color)]">EARLY ACCESS</a>
+                <a href="#" class="text-lg font-[Hit-Cond] text-[var(--primary-color)] on-big-big">EARLY ACCESS</a>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#ffffff" class="w-5 h-5">
                   <path fill-rule="evenodd"
                     d="M4.22 11.78a.75.75 0 0 1 0-1.06L9.44 5.5H5.75a.75.75 0 0 1 0-1.5h5.5a.75.75 0 0 1 .75.75v5.5a.75.75 0 0 1-1.5 0V6.56l-5.22 5.22a.75.75 0 0 1-1.06 0Z"
@@ -109,7 +106,7 @@
                 </svg>
               </div>
               <div class="social-elem cursor-pointer flex items-center justify-center">
-                <a class="text-lg font-[Hit-Cond] text-[var(--primary-color)]">BLACK OPS 6</a>
+                <a class="text-lg font-[Hit-Cond] text-[var(--primary-color)] on-big-big">BLACK OPS 6</a>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="#ffffff" class="w-5 h-5">
                   <path fill-rule="evenodd"
                     d="M4.22 11.78a.75.75 0 0 1 0-1.06L9.44 5.5H5.75a.75.75 0 0 1 0-1.5h5.5a.75.75 0 0 1 .75.75v5.5a.75.75 0 0 1-1.5 0V6.56l-5.22 5.22a.75.75 0 0 1-1.06 0Z"
@@ -174,7 +171,7 @@
                 the military machine that created them.
               </p>
               <a href="#"
-                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)]">Learn
+                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)] on-big-big">Learn
                 More</a>
             </div>
           </div>
@@ -208,7 +205,7 @@
                 experiences.
               </p>
               <a href="#"
-                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)]">Learn
+                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)] on-big-big">Learn
                 More</a>
             </div>
           </div>
@@ -242,7 +239,7 @@
                 and Zombies.
               </p>
               <a href="#"
-                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)]">Learn
+                class="cta-btn py-2 px-4 bg-[var(--btn-background)] font-[Hit-Bold] text-[var(--primary-color)] on-big-big">Learn
                 More</a>
             </div>
           </div>
@@ -433,8 +430,8 @@
           <div class="g-con-glass-con rounded-2xl shadow-lg shadow-[#00000043]">
             <span class="former-title">CALL of DUTY — BLACK OPS6</span>
             <div class="fromer-btn-con">
-              <button class="pre-btn shadow-lg">PRE ORDER</button>
-              <button class="pre-btn shadow-lg">VAULT EDITION</button>
+              <button class="pre-btn shadow-lg on-big-big">PRE ORDER</button>
+              <button class="pre-btn shadow-lg on-big-big">VAULT EDITION</button>
             </div>
           </div>
         </div>
@@ -451,24 +448,24 @@
       </div>
       <div class="middle-ft">
         <div class="mdft-lft">
-          <a href="#">Legal</a>
+          <a href="#" class="on-big-big">Legal</a>
           <div class="sprtr-ft"></div>
-          <a href="#">Terms of use</a>
+          <a href="#" class="on-big-big">Terms of use</a>
           <div class="sprtr-ft"></div>
-          <a href="#">Privacy Policy</a>
+          <a href="#" class="on-big-big">Privacy Policy</a>
           <div class="sprtr-ft"></div>
-          <a href="#">Careers</a>
+          <a href="#" class="on-big-big">Careers</a>
           <div class="sprtr-ft"></div>
-          <a href="#">Cookie Policy</a>
+          <a href="#" class="on-big-big">Cookie Policy</a>
           <div class="sprtr-ft"></div>
-          <a href="#">Support</a>
+          <a href="#" class="on-big-big">Support</a>
           <div class="sprtr-ft"></div>
-          <a href="#">Code of Conduct</a>
+          <a href="#" class="on-big-big">Code of Conduct</a>
         </div>
       </div>
       <div class="bottom-ft">
         <p>&copy; 2024 Call of Duty Clone. All rights reserved</p>
-        <p>Design & Code by <a href="https://github.com/oliverfelixopcode1453" target="_blank"
+        <p>Design & Code by <a href="https://github.com/oliverfelixopcode1453" class="on-big-big" target="_blank"
             style="color: var(--primary-color); font-size: 1em;">OLIVER FELIX</a></p>
       </div>
     </section>
@@ -485,9 +482,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
     integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/Draggable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/loaders/SVGLoader.js"></script> -->
   <script src="script.js"></script>
 </body>
 
